# tweenerspp

./: README.md
benchmarks/include/: benchmark_registry.hpp  options.hpp
benchmarks/src/: benchmark_registry.cpp  claw.cpp  cpptweener.cpp  main.cpp  options.cpp  self.cpp
cmake/: CMakeLists.txt
cmake/modules/: unity-build.cmake
cmake/products/benchmarks/: CMakeLists-cpptweener.txt  CMakeLists.txt  claw.cmake  cpptweener.cmake
cmake/products/core/: CMakeLists.txt
cmake/products/demo/: CMakeLists.txt
cmake/products/tests/: CMakeLists.txt
demo/: main.cpp
docs/: Doxyfile
include/tweeners/: builder.hpp  config.hpp  contract.hpp  easing.hpp  system.hpp
include/tweeners/detail/: builder.tpp  debug.hpp  easing.tpp  scope_guard.hpp  slot_component.hpp  slot_component.tpp  system.tpp
tests/include/: test_helper.hpp  tweener_tracker.hpp
tests/src/: complex_value.cpp  custom_config.cpp  loop.cpp  on_start_on_done.cpp  remove.cpp  remove_next_from_sequence.cpp  remove_predecessor_from_sequence.cpp  remove_sibling_from_sequence.cpp  sequence.cpp  slot_component.cpp  start_twice.cpp  start_update.cpp  test_helper.cpp  tweener_tracker.cpp  zero_duration.cpp
